--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-PyQt6
-crewai-sdk
-pdfminer.six
-python-docx
-pydantic
-pytest
-pytest-qt
+PyQt6>=6.6.0
+crewai>=0.28.0
+pdfminer.six>=20221105
+python-docx>=1.1.0
+pydantic>=2.5.0
+requests>=2.31.0
+pytest>=7.4.0
+pytest-qt>=4.2.0
